--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
+    "@mui/x-data-grid": "^8.9.1",
     "@mui/x-date-pickers": "^8.9.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
